Add new sign in logic
